<resources>

    <string name="app_name">The Blue Plug</string>
    <string name="loginblurb">Login with the hardcoded passcode found on your Blue Plug device.</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="appliances">Appliances</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="run_next">Next Scheduled Run:</string>
    <string name="next_time">19:00</string>
    <string name="run_now">Run Now</string>

    <color name="blue">#2B4F81</color>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_appliances">AppliancesActivity</string>
    <string name="title_activity_specific_appliance">SpecificAppliance</string>
    
    <string name="appliances_prompt">Choose an appliance to add</string>
    <string-array name="appliances_array">
        <item>Dryer</item>
        <item>Air Conditioning</item>
        <item>House Lights</item>
    </string-array>

</resources>